@@ -17,3 +17,4 @@ copy "starting_factories.txt" "release\starting_factories.txt"
 copy "leader_traits.txt" "release\leader_traits.txt"
 copy "merge_nations.txt" "release\merge_nations.txt"
 copy "configuration.txt" "release\configuration.txt"
+copy "blocked_tech_schools.txt" "release\blocked_tech_schools.txt"
